# glamfetch

./: .gitignore  Cargo.toml  README.md
.docs/: glamfetch-spec.md
.github/workflows/: ci.yml
fonts/: README.md
presets/: catppuccin.toml  default.toml  gruvbox.toml  nord.toml
src/: cli.rs  error.rs  lib.rs  main.rs  style.rs  theme.rs
src/collect/: battery.rs  cpu.rs  datetime.rs  desktop.rs  disk.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  system.rs  uptime.rs
src/config/: color_spec.rs  expr.rs  extends.rs  filters.rs  mod.rs  prepass.rs  schema.rs
src/layout/: mod.rs
src/modes/: edit.rs  mod.rs  watch.rs
src/render/: ansi.rs  mod.rs  pipe.rs  terminal.rs
src/widget/: ascii.rs  bar.rs  boxw.rs  figlet.rs  gauge.rs  mod.rs  row.rs  separator.rs  show_if.rs  spacer.rs  stack.rs  text.rs
tests/: golden.rs
tests/fixtures/: two_cell_row.toml
tests/snapshots/: golden__ascii_inline_block.snap  golden__bar_widget_50_percent.snap  golden__box_border_ascii.snap  golden__box_border_double.snap  golden__box_border_rounded.snap  golden__box_border_sharp.snap  golden__box_border_thick.snap  golden__box_rounded_pipe.snap  golden__box_rounded_truecolor.snap  golden__figlet_renders_built_in_font.snap  golden__filter_chain_humanize.snap  golden__gauge_widget_50_percent.snap  golden__gradient_pipe.snap  golden__gradient_truecolor.snap  golden__inner_row_with_separator_and_spacer.snap  golden__missing_field_falls_back_to_placeholder.snap  golden__separator_auto_length_falls_back_when_no_parent_width.snap  golden__styled_text_none.snap  (+6 more)
