[package]
name = "glamfetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A glamorous system-info fetch tool for the terminal."
license = "MIT"
repository = "https://github.com/synnode/glamfetch"
readme = "README.md"
keywords = ["fetch", "neofetch", "fastfetch", "system-info", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustix = { version = "1", features = ["system", "fs"] }
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rayon = "1"
figlet-rs = "1"

[dev-dependencies]
insta = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
